# ouro-maintain

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: README.md  app.py
dashboard/samples/: README.md  presentation_bundle.csv  presentation_bundle.json
docs/: all-results.csv  all-results.md  datasets.md  domain-expansion-plan.md  experiment-plan.md  results-summary.md
report/: main.tex  references.bib
report/sections/: abstract.tex  conclusion.tex  datasets.tex  deployment.tex  discussion.tex  experiments.tex  failure_modes.tex  implementation.tex  introduction.tex  method.tex  related_work.tex  results.tex
scripts/: download_datasets.sh  extract_ims.sh  generate_figures.py  run_all_local_benchmarks.sh  summarize_all_results.py
slides/: .gitignore  README.md  main.tex
slides/sections/: closing.tex  datasets.tex  demo.tex  experiments.tex  limitations.tex  model.tex  motivation.tex  next-steps.tex  outline.tex  references.tex  results.tex
src/ouromaintain/: __init__.py  config.py  data.py  models.py  train.py  train_llm.py
