[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouromaintain"
version = "0.1.0"
description = "Adaptive looped reasoning for predictive maintenance."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "torch>=2.3",
  "matplotlib>=3.9",
  "transformers>=4.40",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
